syntax = "proto3";

option go_package = "./analytics";

message LivePlayerUpdate {
    int32 currentHeartRate = 1;
    float currentLactate = 2;
    int64 timestamp = 3;
}

message AnalysisResponse {
    string recommendation = 1;
    bool shouldSubstitute = 2;
    int32 fatigueLevel = 3;   // Hoe moe een speler is op een schaal van 10
}

service AnalyticsService {
    // Stream zorgt voor Bidirectional Streaming --> uitbreiding
    rpc StreamPlayerAnalytics(stream LivePlayerUpdate) returns (stream AnalysisResponse); 

    rpc AnalyzePlayer(LivePlayerUpdate) returns (AnalysisResponse);
}